--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 .bg-color{
     background-color: black;
 }
@@ -15,10 +16,23 @@
     font-weight: 400;
     font-style: normal;
 }
+.dancing-script-font 
+{
+    font-family: "Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
 .display-flex{
     display: flex;
 }
-
+.btn-primary{
+    background-color: #E6533C;
+    padding: 18px 30px;
+    border-radius: 30px;
+    border: none;
+    font-weight: 700;
+}
 /* navbar */
 .navbar{
     justify-content: space-between;
@@ -45,7 +59,7 @@
     padding: 8px 12px;
     border-radius: 18px;
 }
-.navbar, .banner{
+.navbar{
     max-width: 1440px;
     margin: 0 auto;
 }
@@ -53,12 +67,78 @@
     display: none;
 }
 
+/* banner starts here */
+.banner{
+    align-items: center;
+    margin: 30px 100px;
+}
+.banner-title{
+    font-weight: 700;
+    font-size: 5rem;
+}
+.banner-content{
+    width:50%;
+    position: relative;
+}
+.banner-img{
+    margin-left: 60px;
+}
+.download{
+    background-color: transparent;
+    padding: 18px 30px;
+    border-radius: 30px;
+    font-weight: 700;
+}
+.ball{
+    background-color: #E6533C;
+    width: 30px;
+    height: 30px;
+    border: none;
+    border-radius: 15px;
+    margin-right: 20px;
+}
+
+.badge1{
+    background-color: rgba(0, 0, 0, 0.447);
+    width: max-content;
+    padding: 20px 30px;
+    border-radius: 10px;
+    position: absolute;
+    top: 60%;
+    left: 7%;
+    align-items: center;
+}
+.badge2{
+    background-color: rgba(0, 0, 0, 0.447);
+    width: max-content;
+    padding: 20px 30px;
+    border-radius: 10px;
+    position: absolute;
+    top: 20%;
+    left: 30%;
+    align-items: center;
+}
 /* responsive media query */
 @media screen and (max-width: 576px) {
-    .nav-link{
+    
+    .nav-link, .nav-links{
         display: none;
     }
     .menu-bar{
         display: inline;
+    }
+    .navbar{
+        margin: 0 20px;
+        justify-content: space-evenly;
+    }
+    .banner{
+        flex-direction: column;
+        margin: 0 auto;
+    }
+    .btn-primary, .download{
+        margin-bottom: 20px;
+    }
+    .banner-img{
+        margin: 0 auto;
     }
 }
