margin auto added to banner

--- a/styles/style.css
+++ b/styles/style.css
@@ -128,7 +128,7 @@
         display: inline;
     }
     .navbar{
-        margin: 0 20px;
+        margin: 0 auto;
         justify-content: space-evenly;
     }
     .banner{
