--- a/styles/style.css
+++ b/styles/style.css
@@ -167,6 +167,7 @@
 .bmi{
     align-items: center;
     text-align: left;
+    
 }
 .bmi-title{
     font-weight: 700;
@@ -180,6 +181,7 @@
     align-items: center;
     gap: 175px;
     background-color: #222222;
+    padding-bottom: 50px;
 }
 .bmi-chart-container{
     padding-left: 189px;
@@ -212,6 +214,42 @@
 }
 .bmi-input-activity{
     grid-column: 1/span 2;
+}
+/* Team section */
+.team{
+    align-items: center;
+    margin: 88px 190px;
+}
+.team-title{
+    font-weight: 700;
+    font-size: 3rem;
+    margin-bottom: 0;
+    text-align: center;
+}
+.team-des{
+    text-align: center;
+    margin-bottom: 58px;
+}
+.members{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+.team-container{
+    position: relative;
+}
+.member-img{
+    width: 20.375rem;
+    height: 17rem;
+    border-radius: 18px;
+}
+.member-iden h5{
+    margin: 0;
+}
+.member-iden{
+    position: absolute;
+    top: 70%;
+    left: 2%;
 }
 /* responsive media query */
 @media screen and (max-width: 576px) {
@@ -273,5 +311,16 @@
     }
     .bmi-chart-container, .bmi-calculator-container{
         padding: 0 20px;
+    }
+    .team{
+        margin: 30px 20px;
+    }
+    .team-des{
+        margin: 37px 20px;
+    }
+    .members{
+        grid-template-columns: repeat(1, 1fr);
+        align-items: center;
+        margin: 70px;
     }
 }
